src/ui/readarr_ui/library/snapshots/managarr__ui__readarr_ui__library__edit_author_ui__edit_author_ui_tests__tests__snapshot_tests__edit_author_active_EditAuthorSelectMonitorNewItems.snap
---
source: src/ui/readarr_ui/library/edit_author_ui_tests.rs
expression: output
---
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                            ╭─────────────────────────────────────────  Edit - Test Author  ──────────────────────────────────────────╮                              
                            │                                                                                                         │                              
                            │                                                                                                         │                              
                            │                                                                                                         │                              
                            │                                                                                                         │                              
                            │                                                                                                         │                              
                            │                                                                                                         │                              
                            │                                                                                                         │                              
                            │                                                                                                         │                              
                            │                                                  ╭───╮                                                  │                              
                            │                                       Monitored: │ ✔ │                                                  │                              
                            │                                                  ╰───╯                                                  │                              
                            │                                     ╭───────────────────────────────╮──────────────────────────────╮    │                              
                            │                               Monito│All Books                      │                            ▼ │    │                              
                            │                                     │No New Books                   │──────────────────────────────╯    │                              
                            │                                     │New Books                      │──────────────────────────────╮    │                              
                            │                                 Qual│                               │                            ▼ │    │                              
                            │                                     │                               │──────────────────────────────╯    │                              
                            │                                     │                               │──────────────────────────────╮    │                              
                            │                                Metad│                               │                            ▼ │    │                              
                            │                                     │                               │──────────────────────────────╯    │                              
                            │                                     │                               │──────────────────────────────╮    │                              
                            │                                     │                               │                              │    │                              
                            │                                     │                               │──────────────────────────────╯    │                              
                            │                                     │                               │──────────────────────────────╮    │                              
                            │                                     │                               │                              │    │                              
                            │                                     ╰───────────────────────────────╯──────────────────────────────╯    │                              
                            │                                                                                                         │                              
                            │                                                                                                         │                              
                            │                                                                                                         │                              
                            │                                                                                                         │                              
                            │                                                                                                         │                              
                            │                                                                                                         │                              
                            │                                                                                                         │                              
                            │╭───────────────────────────────────────────────────╮╭──────────────────────────────────────────────────╮│                              
                            ││                       Save                        ││                      Cancel                      ││                              
                            │╰───────────────────────────────────────────────────╯╰──────────────────────────────────────────────────╯│                              
                            ╰─────────────────────────────────────────────────────────────────────────────────────────────────────────╯
