src/ui/readarr_ui/library/snapshots/managarr__ui__readarr_ui__library__edit_author_ui__edit_author_ui_tests__tests__snapshot_tests__edit_author_active_EditAuthorTagsInput.snap
---
source: src/ui/readarr_ui/library/edit_author_ui_tests.rs
expression: output
---
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                            ╭─────────────────────────────────────────  Edit - Test Author  ──────────────────────────────────────────╮                              
                            │                                                                                                         │                              
                            │                                                                                                         │                              
                            │                                                                                                         │                              
                            │                                                                                                         │                              
                            │                                                                                                         │                              
                            │                                                                                                         │                              
                            │                                                                                                         │                              
                            │                                                                                                         │                              
                            │                                                  ╭───╮                                                  │                              
                            │                                       Monitored: │ ✔ │                                                  │                              
                            │                                                  ╰───╯                                                  │                              
                            │                                                  ╭─────────────────────────────────────────────────╮    │                              
                            │                               Monitor New Books: │All Books                                      ▼ │    │                              
                            │                                                  ╰─────────────────────────────────────────────────╯    │                              
                            │                                                  ╭─────────────────────────────────────────────────╮    │                              
                            │                                 Quality Profile: │eBook                                          ▼ │    │                              
                            │                                                  ╰─────────────────────────────────────────────────╯    │                              
                            │                                                  ╭─────────────────────────────────────────────────╮    │                              
                            │                                Metadata Profile: │Author Only                                    ▼ │    │                              
                            │                                                  ╰─────────────────────────────────────────────────╯    │                              
                            │                                                  ╭─────────────────────────────────────────────────╮    │                              
                            │                                            Path: │/nfs/books                                       │    │                              
                            │                                                  ╰─────────────────────────────────────────────────╯    │                              
                            │                                                  ╭─────────────────────────────────────────────────╮    │                              
                            │                                            Tags: │alex                                             │    │                              
                            │                                                  ╰─────────────────────────────────────────────────╯    │                              
                            │                                                                                                         │                              
                            │                                                                                                         │                              
                            │                                                                                                         │                              
                            │                                                                                                         │                              
                            │                                                                                                         │                              
                            │                                                                                                         │                              
                            │                                                                                                         │                              
                            │╭───────────────────────────────────────────────────╮╭──────────────────────────────────────────────────╮│                              
                            ││                       Save                        ││                      Cancel                      ││                              
                            │╰───────────────────────────────────────────────────╯╰──────────────────────────────────────────────────╯│                              
                            ╰─────────────────────────────────────────────────────────────────────────────────────────────────────────╯
