src/ui/readarr_ui/library/snapshots/managarr__ui__readarr_ui__library__edit_author_ui__edit_author_ui_tests__tests__snapshot_tests__edit_author_ui_renders_over_author_details.snap
---
source: src/ui/readarr_ui/library/edit_author_ui_tests.rs
expression: output
---
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
        ╭  Test Author  ────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮        
        │Author: Test Author                                                                                                                                │        
        │Status: Continuing                                                                                                                                 │        
        │Genres: science fic╭─────────────────────────────────────────  Edit - Test Author  ──────────────────────────────────────────╮                     │        
        │Rating: N/A        │                                                                                                         │                     │        
        │Path: /nfs/books/Te│                                                                                                         │                     │        
        │Quality Profile: St│                                                                                                         │                     │        
        │Metadata Profile: C│                                                                                                         │                     │        
        │Monitored: Yes     │                                                                                                         │                     │        
        │Overview: some inte│                                                                                                         │irst novel took him  │        
        │seven years to fini│                                                                                                         │                     │        
        │                   │                                                                                                         │                     │        
        │                   │                                                  ╭───╮                                                  │                     │        
        │╭  Author Details  │                                       Monitored: │ ✔ │                                                  │────────────────────╮│        
        ││ Books │ History ││                                                  ╰───╯                                                  │                    ││        
        ││──────────────────│                                                  ╭─────────────────────────────────────────────────╮    │────────────────────││        
        ││   Monitored      │                               Monitor New Books: │All Books                                      ▼ │    │                    ││        
        ││=> 🏷              │                                                  ╰─────────────────────────────────────────────────╯    │                    ││        
        ││                  │                                                  ╭─────────────────────────────────────────────────╮    │                    ││        
        ││                  │                                 Quality Profile: │eBook                                          ▼ │    │                    ││        
        ││                  │                                                  ╰─────────────────────────────────────────────────╯    │                    ││        
        ││                  │                                                  ╭─────────────────────────────────────────────────╮    │                    ││        
        ││                  │                                Metadata Profile: │Author Only                                    ▼ │    │                    ││        
        ││                  │                                                  ╰─────────────────────────────────────────────────╯    │                    ││        
        ││                  │                                                  ╭─────────────────────────────────────────────────╮    │                    ││        
        ││                  │                                            Path: │/nfs/books                                       │    │                    ││        
        ││                  │                                                  ╰─────────────────────────────────────────────────╯    │                    ││        
        ││                  │                                                  ╭─────────────────────────────────────────────────╮    │                    ││        
        ││                  │                                            Tags: │alex                                             │    │                    ││        
        ││                  │                                                  ╰─────────────────────────────────────────────────╯    │                    ││        
        ││                  │                                                                                                         │                    ││        
        ││                  │                                                                                                         │                    ││        
        ││                  │                                                                                                         │                    ││        
        ││                  │                                                                                                         │                    ││        
        ││                  │                                                                                                         │                    ││        
        ││                  │                                                                                                         │                    ││        
        ││                  │                                                                                                         │                    ││        
        ││                  │╭───────────────────────────────────────────────────╮╭──────────────────────────────────────────────────╮│                    ││        
        ││                  ││                       Save                        ││                      Cancel                      ││                    ││        
        ││                  │╰───────────────────────────────────────────────────╯╰──────────────────────────────────────────────────╯│                    ││        
        ││                  ╰─────────────────────────────────────────────────────────────────────────────────────────────────────────╯                    ││        
        ││                                                                                                                                                 ││        
        ││                                                                                                                                                 ││        
        │╰─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯│        
        ╰───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
